polychem/src/snapshots/polychem__atomic_database__tests__decimal_illegal_type.snap
---
source: polychem/src/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × no type for Decimal, found pi
   ╭─[test:1:10]
 1 │ lossless (pi)3.14
   ·          ──┬─
   ·            ╰── unexpected type name
   ╰────

